# acropolis

./: .gitignore  .gitmodules  .gitpod.Dockerfile  CMakeLists.txt  Cargo.toml  README.md  output.js  scripts.py
cmake/: Findglew.cmake  Findglfw3.cmake  Findv8.cmake
crates/acropolis_bin/: Cargo.toml
crates/acropolis_bin/src/: main.rs  run.rs
crates/acropolis_build/: Cargo.toml
crates/acropolis_build/src/: create.rs  install-esbuild.sh  lib.rs
crates/acropolis_core/: Cargo.toml
crates/acropolis_core/src/: stage.rs
crates/acropolis_input/: Cargo.toml
crates/acropolis_input/src/: lib.rs
crates/acropolis_loader/: Cargo.toml
crates/acropolis_loader/src/: asset.rs  context.rs  lib.rs  plugin.rs  registry.rs  resource.rs
crates/acropolis_math/: Cargo.toml
crates/acropolis_math/src/: lib.rs  plugin.rs
crates/acropolis_math/src/components/: mod.rs  transform.rs
crates/acropolis_math/src/systems/: transform.rs
crates/acropolis_physics/: Cargo.toml
crates/acropolis_physics/src/: lib.rs  resources.rs
crates/acropolis_physics/src/components/: collider2d.rs  mod.rs  rigidbody2d.rs
crates/acropolis_physics/src/systems/: tick.rs
crates/acropolis_render/: Cargo.toml
crates/acropolis_render/src/: lib.rs  plugin.rs  state.rs  window.rs
crates/acropolis_render/src/assets/: material.rs  mod.rs  texture.rs
crates/acropolis_render/src/components/: camera.rs  mesh.rs
crates/acropolis_render/src/systems/: camera.rs  mesh.rs  mod.rs
crates/acropolis_scripting/: Cargo.toml
crates/acropolis_scripting/js/: entry.ts
crates/acropolis_scripting/js/std/@acropolis/core/: deno.ts  index.ts  package.json  transform.ts
crates/acropolis_scripting/js/std/@acropolis/core/math/: vector2.ts  vector3.ts
crates/acropolis_scripting/js/std/@acropolis/input/: index.ts  package.json
crates/acropolis_scripting/js/std/@acropolis/physics/: index.ts  rigidbody2d.ts
crates/acropolis_scripting/macros/: Cargo.toml
crates/acropolis_scripting/macros/src/: lib.rs
crates/acropolis_scripting/src/: init.rs  lib.rs  plugin.rs  resources.rs  scriptable.rs
crates/acropolis_scripting/src/components/: behavior.rs  mod.rs
crates/acropolis_scripting/src/ops/: fast_vec3.rs  generic.rs  method_call.rs  mod.rs
crates/acropolis_scripting/src/systems/: update.rs
crates/giz_bin/: Cargo.toml
crates/giz_bin/src/: main.rs
crates/giz_build/: Cargo.toml
crates/giz_build/js/: build.mjs
crates/giz_build/src/: create.rs  lib.rs
crates/giz_build/src/ecma/: bundler.rs  mod.rs  module_resolution.rs  transpile.rs
crates/giz_core/: Cargo.toml
crates/giz_core/src/: application.rs  lib.rs  resources.rs
crates/giz_input/: Cargo.toml
crates/giz_input/src/: lib.rs
crates/giz_loader/: Cargo.toml
crates/giz_loader/src/: asset.rs  component.rs  context.rs  lib.rs  plugin.rs
crates/giz_math/: Cargo.toml
crates/giz_math/src/: lib.rs  plugin.rs
crates/giz_render/: Cargo.toml
crates/giz_render/src/: lib.rs  plugin.rs  resources.rs  state.rs  window.rs
crates/giz_render/src/components/: camera.rs  mesh.rs
crates/giz_render/src/systems/: camera.rs  mesh.rs
crates/giz_render/src/utils/: material.rs  mod.rs
crates/giz_scripting/: Cargo.toml
crates/giz_scripting/js/: entry.ts
crates/giz_scripting/js/std/@giz/core/: behavior.ts  package.json  transform.ts
crates/giz_scripting/js/std/@giz/core/math/: vector3.ts
crates/giz_scripting/js/std/@giz/input/: index.ts  package.json
crates/giz_scripting/macros/: Cargo.toml
crates/giz_scripting/macros/src/: impl_scriptable.rs  lib.rs
crates/giz_scripting/src/: init.rs  lib.rs  plugin.rs  resources.rs  scriptable.rs  scripting_api.rs
crates/giz_scripting/src/components/: behavior.rs
crates/giz_scripting/src/js/: bootstrap.js
crates/giz_scripting/src/systems/: update.rs
modules/: data.h  main.cpp
modules/core/: CMakeLists.txt  Game.cpp  Game.h  Window.cpp  Window.h
modules/ecs/: CMakeLists.txt  Entity.cpp  Entity.h  Transform.cpp  Transform.h
modules/ecs/components/: BaseComponent.h
modules/ecs/systems/: RenderSystem.h  ScriptingSystem.h
modules/rendering/: CMakeLists.txt  RenderSystem.cpp  Renderable.h  Shader.cpp  Shader.h  VBO.cpp  VBO.h  meta.json
modules/rendering/2d/: SpriteBatch.cpp  SpriteBatch.h
modules/rendering/3d/: Mesh3D.cpp  Mesh3D.h
modules/rendering/components/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Sprite.cpp  Sprite.h
modules/rendering/shaders/: basic.frag  basic.vert  sprite.frag  sprite.vert
modules/scripting/: CMakeLists.txt  FunctionTemplateBuilder.cpp  FunctionTemplateBuilder.h  ModuleApiDeclaration.cpp  ModuleApiDeclaration.h  ObjectTemplateBuilder.cpp  ObjectTemplateBuilder.h  ScriptingSystem.cpp
modules/scripting/api/: BehaviorApi.cpp  BehaviorApi.h  EntityApi.cpp  EntityApi.h  Vector3Api.cpp  Vector3Api.h
modules/scripting/components/: Behavior.cpp  Behavior.h
modules/utils/: CMakeLists.txt  assert.cpp  assert.h  logger.cpp  logger.h  profile.cpp  profile.h  string.cpp  string.h
res/shader/: basic.frag  basic.vert
src/: data.h  main.cpp  main.rs
src/components/: default_bundle.rs  mod.rs  name.rs  transform.rs
src/components/rendering/: camera.rs  mesh.rs  mod.rs
src/components/scripting/: behavior.rs
src/core/: ecs.rs  game.cpp  game.h  mod.rs  mod.rs~  scene.rs  window.cpp  window.h
src/ecs/: Entity.cpp  Entity.h  Transform.cpp
src/ecs/components/: BaseComponent.cpp  BaseComponent.h  Behavior.cpp  (+4 more)
src/lib/: application.rs  mod.rs  window.rs
src/renderer/: Renderable.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vbo.cpp  vbo.h
src/rendering/: mod.rs  window.rs
src/resources/: core.rs  mod.rs  rendering.rs  scripting.rs
src/systems/: mod.rs  transform.rs
src/utils/: assert.cpp  logger.cpp  logger.h  types.rs
test-world/: .gitignore  acropolis.json  image.json  material.json  material.wgsl  test-material.json  test-material.wgsl  test-world.json  tsconfig.json
test-world/src/: camera.ts  hello.js  move.ts  platform.ts  rotate.js
web/: .gitignore  Cargo.toml  index.html  package.json
web/src/: lib.rs
web/src-web/: index.ts
(+26 files in other folders)
