[workspace]
resolver = "2"
members = [
  "crates/acropolis_core",
  "crates/acropolis_bin",
  "crates/acropolis_render",
  "crates/acropolis_scripting",
  "crates/acropolis_input",
  "crates/acropolis_loader",
  "crates/acropolis_scripting/macros",
  "crates/acropolis_math",
  "crates/acropolis_bin"
]
