[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
acropolis_core = { path = "../crates/acropolis_core" }
acropolis_render = { path = "../crates/acropolis_render" }
acropolis_scripting = { path = "../crates/acropolis_scripting" }
acropolis_input = { path = "../crates/acropolis_input" }
acropolis_loader = { path = "../crates/acropolis_loader" }
acropolis_math = { path = "../crates/acropolis_math" }
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.17"

