[package]
name = "acropolis_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.9.0"
acropolis_core = { path = "../acropolis_core" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde-transcode = "1.1.1"
anyhow = "1.0.69"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.86"
log = "0.4.17"
