[package]
name = "acropolis_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
acropolis_core = { path = "../acropolis_core" }
acropolis_loader = { path = "../acropolis_loader" }
acropolis_scripting = { path = "../acropolis_scripting" }
acropolis_math = { path = "../acropolis_math" }
serde = { version = "1.0", features = ["derive"] }
bevy_ecs = "0.9"
nalgebra = "0.32.2"
rapier2d = { version = "0.17.2", features = ["serde-serialize"] }
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core = "0.149.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
