[package]
name = "acropolis_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
wgpu = { version = "0.16.0", features = ["webgl"] }
winit = "0.27.5"
acropolis_core = { path = "../acropolis_core" }
acropolis_loader = { path = "../acropolis_loader" }
acropolis_scripting = { path = "../acropolis_scripting" }
log = "0.4.17"
lazy_static = "1.4.0"
pollster = "0.2.5"
bevy_ecs = "0.9"
bytemuck = "1.12.3"
nalgebra = "0.32.2"
anyhow = "1.0.68"
acropolis_math = { path = "../acropolis_math" }
serde = { version = "1.0.152", features = ["derive"] }
image = "0.24.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core = "0.149.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
