[package]
name = "acropolis_scripting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.9"
deno_core = "0.149.0"
acropolis_core = { path = "../acropolis_core" }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
macros = { path = "./macros" }
cgmath = { version = "0.18.0", features = ["serde"] }
acropolis_loader = { path = "../acropolis_loader" }
acropolis_build = { path = "../acropolis_build" }
