[package]
name = "acropolis_scripting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.9"
acropolis_core = { path = "../acropolis_core" }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
macros = { path = "./macros" }
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
acropolis_loader = { path = "../acropolis_loader" }
acropolis_build = { path = "../acropolis_build" }
proc-macro2 = "1.0.58"
cfg-if = "1.0.0"
serde_json = "1.0.96"
wasm-bindgen = "0.2.86"
hashbrown = "0.14.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core = "0.149.0"
