[package]
name = "giz_build"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
swc = "0.255.21"
swc_common = { version = "0.29.37", features = ["tty-emitter"] }
swc_core = { version = "0.69.19", features = ["ecma_ast", "ecma_utils", "ecma_visit", "ecma_transforms", "common", "swc_ecma_loader", "ecma_parser_typescript", "swc_ecma_transforms_module", "ecma_transforms_module"] }

